# ObjectDumpDPP

./: DaLeggere.txt  FlussoProgrammaCAEN.txt  Note.txt  README.md
CAEN/ZLEControlSoftware-1.0.0/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.in  README  config.status  configure  configure.ac
CAEN/ZLEControlSoftware-1.0.0/src/: Makefile  Makefile.am  Makefile.in  ZLECSconfig.c  ZLECSplot.c  ZLEControlSoftware  ZLEControlSoftware.c
CAEN/ZLEControlSoftware-1.0.0/src/.deps/: ZLECSconfig.Po  ZLECSplot.Po  ZLEControlSoftware.Po  keyb.Po
ObjectDump/: .plot_data.txttmp  ConfigurationFile  ConfigurationFile~  ElencoModifiche.txt  LogFile  Makefile  NTP.txt  Readme.txt  RoadMap.txt  ZLEControlSoftwareConfig.txt  objectDumpManual.odt  objectdump  objectdumpclient
ObjectDump/RawData/: CAENDigitizerType.h  Corrections_gr0_cell.txt  Corrections_gr0_nsample.txt  Corrections_gr0_time.txt  Corrections_gr1_cell.txt  Corrections_gr1_nsample.txt  Corrections_gr1_time.txt  Corrections_gr2_cell.txt  Corrections_gr2_nsample.txt  Corrections_gr2_time.txt  Corrections_gr3_cell.txt  Corrections_gr3_nsample.txt  Corrections_gr3_time.txt  DigitizerConfig.conf  OfflineReadout.cpp  OfflineReadout.h  OfflineReadoutX742.c  data.txt  data.txtsz  decode  decode742  events.txt  eventsSimple.txt  testfile.root  x742.h
ObjectDump/SourceCode/: Analizzatore.c  Analizzatore.h  AnalizzatoreLessicale.flex  AnalizzatoreUtils.c  AnalizzatoreUtils.h  ApplicationSetup.cpp  ApplicationSetup.h  CommunicationObject.cpp  CommunicationObject.h  ConfObject.cpp  ConfObject.h  DefineCommands.h  Input.h  (+25 more)
(+7 files in other folders)
